Fix bull photo on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   background-color: #030924;
 }
 
+.bull-photo {
+  width: 100%;
+  height: auto;
+  max-width: 650px;
+}
+
 .component {
   min-height: 100vh;
   display: flex;
